force-app/main/default/objects/Account/fields/AccountNo__c.field-meta.xml
<CustomField>
    <fullName>AccountNo__c</fullName>
    <label>AccountNo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>