force-app/main/default/objects/Account/fields/Active_Syndications__c.field-meta.xml
<CustomField>
    <fullName>Active_Syndications__c</fullName>
    <label>Active Syndications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>