force-app/main/default/objects/Account/fields/All_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>All_Subscriptions__c</fullName>
    <label>All Subscriptions</label>
    <summaryForeignKey>Syndication__c.Subscriber_Station_Network__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>