force-app/main/default/objects/Account/fields/contact_countries__c.field-meta.xml
<CustomField>
    <fullName>contact_countries__c</fullName>
    <label>contact countries</label>
    <length>200</length>
    <type>Text</type>
</CustomField>