force-app/main/default/objects/Account/fields/contact_names__c.field-meta.xml
<CustomField>
    <fullName>contact_names__c</fullName>
    <label>contact names</label>
    <length>200</length>
    <type>Text</type>
</CustomField>