force-app/main/default/objects/Account/fields/latitude__c.field-meta.xml
<CustomField>
    <fullName>latitude__c</fullName>
    <label>latitude</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>