force-app/main/default/objects/Account/fields/longitude__c.field-meta.xml
<CustomField>
    <fullName>longitude__c</fullName>
    <label>longitude</label>
    <scale>3</scale>
    <type>Location</type>
</CustomField>