force-app/main/default/objects/Account/fields/OptyAmount__c.field-meta.xml
<CustomField>
    <fullName>OptyAmount__c</fullName>
    <label>OptyAmount</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>