force-app/main/default/objects/Account/fields/OptyStage__c.field-meta.xml
<CustomField>
    <fullName>OptyStage__c</fullName>
    <label>OptyStage</label>
    <length>10</length>
    <type>Text</type>
</CustomField>