force-app/main/default/objects/Account/fields/ParentAccountNo__c.field-meta.xml
<CustomField>
    <fullName>ParentAccountNo__c</fullName>
    <label>ParentAccountNo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>