force-app/main/default/objects/Account/fields/ProfileName__c.field-meta.xml
<CustomField>
    <fullName>ProfileName__c</fullName>
    <formula>IF(RecordType.DeveloperName==&#39;Legal&#39;,&#39;System Administrator&#39;,&#39;No&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProfileName</label>
    <type>Text</type>
</CustomField>