force-app/main/default/objects/Account/recordTypes/Non_Legal.recordType-meta.xml
<RecordType>
    <fullName>Non_Legal</fullName>
    <active>true</active>
    <label>Non Legal</label>
</RecordType>